--- a/html/mosaic/index.html
+++ b/html/mosaic/index.html
@@ -22,7 +22,7 @@
 
     <iframe class="tile row4 col2" src="tiles/session.html#H"></iframe>
 
-    <iframe class="social" src="tiles/twitter.html" scrolling="no"></iframe>
+    <iframe class="social" src="tiles/social.html" scrolling="no"></iframe>
 
 </div>
 </body>
