--- a/html/mobile/index.html
+++ b/html/mobile/index.html
@@ -4,8 +4,10 @@
   <title>CHI'13 Interactive Schedule</title> 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/jquery.mobile-1.3.0.min.css" />
-  <link rel="stylesheet" href="css/ios.css" />
+  <!-- <link rel="stylesheet" href="css/ios.css" /> -->
+  <link rel="stylesheet" href="css/AndroidHoloDarkLight.min.css" />
   <link rel="stylesheet" href="css/mobile.css" />
+  <link rel="stylesheet" href="css/roboto/fonts.css" />
   <script src="js/jquery-1.8.3.min.js"></script>
   <script src="js/NativeBridge.js"></script>
   <script src="js/jquery.mobile-1.3.0.min.js"></script>
@@ -18,6 +20,15 @@
     function closeISchedule(){
       NativeBridge.call('closeISchedule');
     }  
+
+    //Apply styling depending on platform, iOS or Android
+    //Default is android, if not android loads iOS theme
+    var ua = navigator.userAgent.toLowerCase();
+    var isAndroid = ua.indexOf("android") > -1; //&& ua.indexOf("mobile");
+    if(!isAndroid) {
+       $($("link[rel=stylesheet]")[1]).attr({href : "css/ios.css"});
+      $($("link[rel=stylesheet]")[3]).remove();
+    }
   </script>
   <div data-role="header" data-position="fixed">
       <a href="#" data-role="button" data-icon="arrow-l" onclick="closeISchedule();">More</a>     
@@ -45,8 +56,6 @@
       <li><h3><a href="#tiles?screen=2" data-transition="slide">Screen 2</a></h3></li>
       <li><h3><a href="#tiles?screen=3" data-transition="slide">Screen 3</a></h3></li>
       <li><h3><a href="#tiles?screen=4" data-transition="slide">Screen 4</a></h3></li>
-      <li><h3><a href="#tiles?screen=5" data-transition="slide">Screen 5</a></h3></li>
-      <li><h3><a href="#tiles?screen=6" data-transition="slide">Screen 6</a></h3></li>
     </ul>
   </div>
 </div>
@@ -89,11 +98,12 @@
             })
             .then( function ( response ) {
               console.log(response);
-              var temp = [];
                 $.each( response, function ( i, val ) {
-                    html += "<li  class='result' data-source=" + val.source + ">" + i + "<span class='ui-li-count'>" + val.submissions.length + "</span></li>";
+                  $.each(val, function(j){
+                    html += "<li  class='result' data-source=" + i + ">" + j + "<span class='ui-li-count'>" + val[j].length + "</span></li>";
+                  })
                 });
-                console.log(temp);
+
                 $ul.html( html );
                 $ul.listview( "refresh" );
                 $ul.trigger( "updatelayout");
