--- a/html/mobile/index.html
+++ b/html/mobile/index.html
@@ -26,7 +26,7 @@
     var ua = navigator.userAgent.toLowerCase();
     var isAndroid = ua.indexOf("android") > -1; //&& ua.indexOf("mobile");
     if(!isAndroid) {
-       $($("link[rel=stylesheet]")[1]).attr({href : "css/ios.css"});
+      $($("link[rel=stylesheet]")[1]).attr({href : "css/ios.css"});
       $($("link[rel=stylesheet]")[3]).remove();
     }
   </script>
@@ -59,20 +59,6 @@
     </ul>
   </div>
 </div>
-
-
-<!-- <div data-role="page" id="options" data-add-back-btn="true" data-back-btn-text="Screens">
-  <div data-role="header" data-position="fixed" >
-    <h1>iSchedule</h1>
-  </div>
-  
-  <div data-role="content"> 
-    <h3> What are you up to?</h3>
-    <p> I'm interested in a video showing on the screen and I would like to <a href="#tiles" data-transition="slide">add it to my schedule. </a> </p>
-    <p> I want to show stuff relevant to my interest on the big display. I want to <a href="#search" data-transition="slide">search. </a></p>
-  </div>
- 
-</div> -->
 
 <div data-role="page" id="search"  data-add-back-btn="true"  data-back-btn-text="Back">
   <script>
@@ -416,10 +402,10 @@ Returns true or false depending on bridge call result which can be:
       <div id="B" class="ui-block-b tile green"><a href="#tiles" data-transition="slide">...</a> </div>
       <div id="C" class="ui-block-a tile blue"><a href="#tiles" data-transition="slide">...</a></div>
       <div id="D" class="ui-block-b tile blue"><a href="#tiles" data-transition="slide">...</a></div>
-      <div id="E" class="ui-block-a tile red"><a href="#tiles" data-transition="slide">...</a></div>
-      <div id="F" class="ui-block-b tile red"><a href="#tiles" data-transition="slide">...</a></div>
-      <div id="G" class="ui-block-a tile purple"><a href="#tiles" data-transition="slide">...</a></div>
-      <div id="H" class="ui-block-b tile purple"><a href="#tiles" data-transition="slide">...</a></div>
+      <div id="E" class="ui-block-a tile orange"><a href="#tiles" data-transition="slide">...</a></div>
+      <div id="F" class="ui-block-b tile orange"><a href="#tiles" data-transition="slide">...</a></div>
+      <div id="G" class="ui-block-a tile red"><a href="#tiles" data-transition="slide">...</a></div>
+      <div id="H" class="ui-block-b tile red"><a href="#tiles" data-transition="slide">...</a></div>
     </div>
   </div>
 </div>
