Fixed grid social tile

--- a/html/mosaic/tiles/social.html
+++ b/html/mosaic/tiles/social.html
@@ -9,8 +9,21 @@
     <script type="text/javascript" src="../js/tiles/social.js"></script>    
 </head>
 <body>
-    <div id="social">
 
+    <div id="social">
+        <div id="row-0" class="row">
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+        </div>
+
+        <div id="row-1" class="row">
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+        </div>
     </div>
 </body>
 </html>
