--- a/html/mosaic/tiles/session.html
+++ b/html/mosaic/tiles/session.html
@@ -20,6 +20,30 @@
 <body>
 
     <div id="header">
+        <p class="one label_251  label">251</p>
+        <p class="two label_252A label">252A</p>
+        <p class="one label_252B label">252B</p>
+        <p class="two label_253  label">253</p>
+
+        <p class="one label_241  label">241</p>
+        <p class="mid label_242A label">242A</p>
+        <p class="mid label_242B label">242B</p>
+        <p class="mid label_242AB label">242AB</p>
+        <p class="one label_243 label">243</p>
+        <p class="two label_Blue  label">Blue</p>
+
+        <p class="one-theatre label_Havane  label">Havane</p>
+        <p class="mid label_351 label">351</p>
+        <p class="mid label_352A label">352A</p>
+        <p class="mid label_352B label">352B</p>
+        <p class="mid label_352AB label">352AB</p>
+
+        <p class="one-theatre label_Bordeaux  label">Bordeaux</p>
+        <p class="mid label_342A label">342A</p>
+        <p class="mid label_343 label">343</p>
+        <p class="one label_361 label">361</p>
+        <p class="two-theatre label_362  label">362/363</p>
+
         <svg>
             <!-- Green Line -->
             <line x1="72" x2="72" y1="15" y2="40" class="line_251" />
