--- a/html/mobile/outside.html
+++ b/html/mobile/outside.html
@@ -9,16 +9,13 @@
     <link rel="stylesheet" href="css/roboto/fonts.css" />
     <script src="js/jquery-1.8.3.min.js"></script>
     <script src="js/jquery.mobile-1.3.0.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="js/NativeBridge.js"></script>
   </head> 
 <body> 
-  <div data-role="page" id="home" data-add-back-btn="true">
+  <div data-role="page" id="outside" data-add-back-btn="true">
     <script>
       function closeISchedule(){
         NativeBridge.call('closeISchedule');
       }  
-
       //Apply style depending on platform, iOS or Android
       //Default is android, if not android loads iOS theme
       var ua = navigator.userAgent.toLowerCase();
@@ -33,25 +30,8 @@
         <h1>iSchedule</h1>
     </div>
     <div data-role="content"> 
-        <h3> Welcome to CHI'13 interactive schedule. </h3>
-        <p> Here you can interact with the large displays found through the conference and discover interesting events and add them to your schedule.</p>
-        <p> You found one of the large displays? Great! Now, <a href="#screens" data-transition="slide">which one is it?</a></p>
-    </div>
-  </div>
-
-  <div data-role="page" id="screens" data-add-back-btn="true" data-back-btn-text="Instructions">
-    <div data-role="header" data-position="fixed">
-      <h1>iSchedule</h1>
-    </div>
-   
-    <div data-role="content"> 
-      <h3> The label at the top says...</h3>
-      <ul  id="screen_list" data-role="listview" data-filter="false">
-        <li><h3><a href="tiles.html" data-transition="slide">Screen 1</a></h3></li>
-        <li><h3><a href="tiles.html" data-transition="slide">Screen 2</a></h3></li>
-        <li><h3><a href="tiles.html" data-transition="slide">Screen 3</a></h3></li>
-        <li><h3><a href="tiles.html" data-transition="slide">Screen 4</a></h3></li>
-      </ul>
+        <h3> Désolé </h3>
+        <p> It seems like you're not physically present at the conference. You can only access the interactive schedule within the venue.</p>
     </div>
   </div>
 </body>
