triying new jqm navigation method

--- a/html/mobile/tiles.html
+++ b/html/mobile/tiles.html
@@ -197,7 +197,7 @@
 
         if(text === "Filter videos"){
             selectedTile = tileId;
-            $.mobile.changePage("#search", "slide", true, true);
+            $.mobile.changePage("search.html", "slide", true, true);
         }
         else
           if (isInSchedule === "true") {
@@ -285,7 +285,7 @@ Returns true or false depending on bridge call result which can be:
       <div id="E" class="ui-block-a tile green"><a href="#tiles" data-transition="slide">Filter videos</a></div>
       <div id="F" class="ui-block-b tile blue"><a href="#tiles" data-transition="slide">Filter videos</a></div>
       <div id="G" class="ui-block-a tile orange"><a href="#tiles" data-transition="slide">Filter videos</a></div>
-      <div id="H" class="ui-block-b tile red"><a href="#search" data-transition="slide">Filter videos</a></div>    
+      <div id="H" class="ui-block-b tile red"><a href="#tiles" data-transition="slide">Filter videos</a></div>    
     </div>
   </div>
 </div>
