fixing link, removing duplicated code

--- a/html/mobile/search.html
+++ b/html/mobile/search.html
@@ -81,7 +81,7 @@
     $('#post').on("click", function(){
       postFilter(result);
       console.log(result);
-      $.mobile.changePage("#tiles", "slide", true, true);
+      $.mobile.changePage("tiles.html", "slide", true, true);
     });
 
   function getCodes(item){
