--- a/html/mobile/search.html
+++ b/html/mobile/search.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html> 
 <html> 
   <head> 
-  <title>CHI'13 Interactive Schedule</title> 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/jquery.mobile-1.3.0.min.css" />
-  <link rel="stylesheet" href="css/AndroidHoloDarkLight.min.css" />
-  <link rel="stylesheet" href="css/mobile.css" />
-  <link rel="stylesheet" href="css/roboto/fonts.css" />
-  <script src="js/jquery-1.8.3.min.js"></script>
-  <script src="js/NativeBridge.js"></script>
-  <script src="js/jquery.mobile-1.3.0.min.js"></script>
-  <script src="/socket.io/socket.io.js"></script>
+    <title>CHI'13 Interactive Schedule</title> 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/jquery.mobile-1.3.0.min.css" />
+    <link rel="stylesheet" href="css/AndroidHoloDarkLight.min.css" />
+    <link rel="stylesheet" href="css/roboto/fonts.css" />
+    <link rel="stylesheet" href="css/mobile.css" />
+    <script src="js/jquery-1.8.3.min.js"></script>
+    <script src="js/NativeBridge.js"></script>
+    <script src="js/jquery.mobile-1.3.0.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
 </head> 
 <body> 
  
@@ -114,7 +114,7 @@
   </script>
   <div data-role="header" data-position="fixed">
     <h1>Search</h1>
-    <a id="post" class=" ui-btn-right invisible" href="#tiles" data-icon="check">Show</a>
+    <a id="post" class=" ui-btn-right invisible" href="tiles.html" data-icon="check">Show</a>
   </div>
  
   <div data-role="content"> 
