--- a/html/mobile/tiles.html
+++ b/html/mobile/tiles.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html> 
 <html> 
   <head> 
-  <title>CHI'13 Interactive Schedule</title> 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/jquery.mobile-1.3.0.min.css" />
-  <link rel="stylesheet" href="css/AndroidHoloDarkLight.min.css" />
-  <link rel="stylesheet" href="css/mobile.css" />
-  <link rel="stylesheet" href="css/roboto/fonts.css" />
-  <script src="js/jquery-1.8.3.min.js"></script>
-  <script src="js/NativeBridge.js"></script>
-  <script src="js/jquery.mobile-1.3.0.min.js"></script>
-  <script src="/socket.io/socket.io.js"></script>
+    <title>CHI'13 Interactive Schedule</title> 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/jquery.mobile-1.3.0.min.css" />
+    <link rel="stylesheet" href="css/AndroidHoloDarkLight.min.css" />
+    <link rel="stylesheet" href="css/roboto/fonts.css" />
+    <link rel="stylesheet" href="css/mobile.css" />
+    <script src="js/jquery-1.8.3.min.js"></script>
+    <script src="js/NativeBridge.js"></script>
+    <script src="js/jquery.mobile-1.3.0.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
 </head> 
 <body> 
 
@@ -278,14 +278,14 @@ Returns true or false depending on bridge call result which can be:
       <div id="F" class="ui-block-b tile orange"><a href="#tiles" data-transition="slide">Filter videos</a></div>
       <div id="G" class="ui-block-a tile red"><a href="#tiles" data-transition="slide">Filter videos</a></div>
       <div id="H" class="ui-block-b tile red"><a href="#tiles" data-transition="slide">Filter videos</a></div> -->
-      <div id="A" class="ui-block-a tile light_purple"><a href="#tiles" data-transition="slide">Filter videos</a></div>
-      <div id="B" class="ui-block-b tile light_purple"><a href="#tiles" data-transition="slide">Filter videos</a> </div>
-      <div id="C" class="ui-block-a tile light_purple"><a href="#tiles" data-transition="slide">Filter videos</a></div>
-      <div id="D" class="ui-block-b tile light_purple"><a href="#tiles" data-transition="slide">Filter videos</a></div>
-      <div id="E" class="ui-block-a tile green"><a href="#tiles" data-transition="slide">Filter videos</a></div>
-      <div id="F" class="ui-block-b tile blue"><a href="#tiles" data-transition="slide">Filter videos</a></div>
-      <div id="G" class="ui-block-a tile orange"><a href="#tiles" data-transition="slide">Filter videos</a></div>
-      <div id="H" class="ui-block-b tile red"><a href="#tiles" data-transition="slide">Filter videos</a></div>    
+      <div id="A" class="ui-block-a tile light_purple"><span>Filter videos</span></div>
+      <div id="B" class="ui-block-b tile light_purple"><span>Filter videos</span></div>
+      <div id="C" class="ui-block-a tile light_purple"><span>Filter videos</span></div>
+      <div id="D" class="ui-block-b tile light_purple"><span>Filter videos</span></div>
+      <div id="E" class="ui-block-a tile green"><span>Filter videos</span></div>
+      <div id="F" class="ui-block-b tile blue"><span>Filter videos</span></div>
+      <div id="G" class="ui-block-a tile orange"><span>Filter videos</span></div>
+      <div id="H" class="ui-block-b tile red"><span>Filter videos</span></div>    
     </div>
   </div>
 </div>
